--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@ant-design/pro-components": "^2.7.15",
     "@antv/l7": "^2.22.1",
     "@antv/l7-maps": "^2.22.1",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
     "@monaco-editor/react": "^4.6.0",
+    "@uiw/codemirror-theme-vscode": "^4.23.2",
+    "@uiw/react-codemirror": "^4.23.2",
     "antd": "^5.20.0",
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
+    "mobx": "^6.13.1",
+    "mobx-react": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-json-editor-ajrm": "^2.5.14",
